--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Quad Department Games</title>
+    <title>Angular Express Template</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,18 +12,16 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/jasny-bootstrap/dist/js/jasny-bootstrap.min.js"></script>
     <script src="app/app.js"></script>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="stylesheets/col-xxs.css">
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
-<body ng-app="unilever-foundry50" ng-controller="MainCtrl">
-    Unilever
+<body ng-app="bluemix-angular" ng-controller="MainCtrl">
+    The UI
 </body>
 
 </html>
