--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,45 @@
 <html>
 
 <head>
-    <title>Angular Express Template</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/lodash/lodash.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="app/app.js"></script>
+  <title>Angular Express Template</title>
 
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="stylesheets/col-xxs.css">
-    <link rel="stylesheet" href="stylesheets/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <base href="/">
+
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/lodash/lodash.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="app/routes/main/main.css">
+  <link rel="stylesheet" href="app/routes/notmain/notmain.css">
 </head>
 
-<body ng-app="bluemix-angular" ng-controller="MainCtrl">
-    The UI
+<body ng-app="bluemix-angular">
+
+  <!-- This us a scustom 'directive' created in this application -->
+  <my-header></my-header>
+  <!-- Depending on which page you go to - this bit here will be populated in accordance to the current 'state' - defined in app.js' -->
+  <div ui-view=""></div>
+
+
+  <script src="app/app.js"></script>
+
+  <script src="app/directives/header/header.directive.js"></script>
+  <script src="app/directives/reusablething/reusablething.directive.js"></script>
+
+  <script src="app/routes/main/main.controller.js"></script>
+  <script src="app/routes/notmain/notmain.controller.js"></script>
+
+  <script src="app/services/api.service.js"></script>
 </body>
 
 </html>
-
